--- a/.github/workflows/my-sample.yml
+++ b/.github/workflows/my-sample.yml
@@ -1,1 +1,12 @@
-
+name: My-first-GitHub-Actions
+on: [push]
+jobs:
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "the job triggered by a ${{ github.event_name }} event."
+      - name: Check out repository code
+        uses: action/checkout@v4
+      - run: echo "repo cloned to runner."
+      - name: List files
+        run: ls ${{ github.workspace }}
